--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Unity WebGL Player | Gimu Bird</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
+      // Instantiate the Unity instance without the mobile warning
       UnityLoader.instantiate("unityContainer", "Build/GimuBirdWebGl.json");
     </script>
   </head>
